# 42-Push_swap

./: CMakeLists.txt  algorithm.c  array.c  checker.c  ft_list.c  lastcheck.c  operation.c  operation2.c  operation3.c  push_swap.c  push_swap.h  quicksort.c  special_case.c  special_case2.c  validation.c
GetNextLine/: README.md  get_next_line.h
GetNextLine/libft/: ft_atoi.c
